--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/handlebars": "^4.1.0",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
+    "crypto": "^1.0.1",
     "multer": "1.4.5-lts.2",
     "mysql2": "^3.14.0",
     "pg": "^8.14.1",
@@ -84,5 +85,8 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "engines": {
+    "node": ">=20.0.0"
   }
 }
