--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/jwt": "^11.0.0",
@@ -31,6 +32,7 @@
     "@types/handlebars": "^4.1.0",
     "@types/nodemailer": "^6.4.17",
     "bcryptjs": "^3.0.2",
+    "cache-manager": "^6.4.2",
     "crypto": "^1.0.1",
     "multer": "1.4.5-lts.2",
     "mysql2": "^3.14.0",
